# c-toxcore-zig

./: .gitignore  BUILD.bazel  README.md  README.org  build.zig  build.zig.zon
.github/: settings.yml
.github/workflows/: ci.yaml
apps/: BootNode.zig  Node.zig  NodeInfo.zig  QueryNode.zig  RespNode.zig  bs-node.zig  echo-bot.zig  key.zig  local-test.zig  response-node.zig  show-keys.zig  test-node.zig
examples/: echo-bot.zig
src/: friend.zig  hex.zig  sodium.zig  tox.zig  wrap.zig
src/tox/: friend.zig
