load("@rules_zig//zig:defs.bzl", "zig_test")
load("//tools/project:build_defs.bzl", "project")

project(license = "gpl3-https")

zig_test(
    name = "testsuite",
    size = "small",
    srcs = glob(["src/**/*.zig"]),
    cdeps = [
        "//c-toxcore",
        "@rules_zig//zig/lib:libc",
    ],
    main = "src/tox.zig",
)
